@@ -1,4 +1,4 @@
-Copyright (c) Joseph Kocherhans, Jacob Kaplan-Moss, Daniel Lindsley.
+Copyright (c) Joseph Kocherhans, Jacob Kaplan-Moss, Daniel Lindsley, Tadas Dailyda.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
@@ -11,7 +11,7 @@ are permitted provided that the following conditions are met:
        notice, this list of conditions and the following disclaimer in the
        documentation and/or other materials provided with the distribution.
 
-    3. Neither the name of pysolr nor the names of its contributors may be used
+    3. Neither the name of skisolr nor the names of its contributors may be used
        to endorse or promote products derived from this software without
        specific prior written permission.
 
