@@ -5,13 +5,13 @@ exclude=docs
 [isort]
 line_length=110
 default_section=THIRDPARTY
-known_first_party=pysolr
+known_first_party=skisolr
 
 [wheel]
 universal = 1
 
 [nosetests]
 with-coverage=1
-cover-package=pysolr
+cover-package=skisolr
 cover-erase=1
 verbosity=2
